# tpt-spectra

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  spec.txt  todo.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/ai-bridge/: Cargo.toml
crates/ai-bridge/src/: adapter.rs  inference.rs  lib.rs  output.rs  registry.rs
crates/ai-bridge/tests/: ai.rs
crates/cli/: Cargo.toml
crates/cli/examples/: phantom.rs
crates/cli/src/: main.rs  pipeline.rs
crates/dicom-parser/: Cargo.toml
crates/dicom-parser/src/: error.rs  lib.rs  model.rs  parser.rs  pixel.rs  transfer_syntax.rs  writer.rs
crates/dicom-parser/tests/: dcmtk_parity.rs  robustness.rs
crates/gpu-backend/: Cargo.toml
crates/gpu-backend/src/: device.rs  lib.rs  shader.rs
crates/gpu-backend/tests/: gpu.rs
crates/recon-core/: Cargo.toml
crates/recon-core/examples/: bench.rs
crates/recon-core/src/: geometry.rs  lib.rs  volume.rs
crates/recon-core/src/modality/: ct.rs  mod.rs  mri.rs  pet.rs  ultrasound.rs
crates/recon-core/tests/: integration.rs  phantom.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FDA_510K_GROUNDWORK.md
