[workspace]
resolver = "2"
members = [
    "crates/dicom-parser",
    "crates/recon-core",
    "crates/gpu-backend",
    "crates/ai-bridge",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
authors = ["TPT Solutions"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/TPT-Solutions/tpt-spectra"
homepage = "https://github.com/TPT-Solutions/tpt-spectra"
description = "GPU-accelerated DICOM reconstruction engine"

[workspace.dependencies]
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
