[package]
name = "spectra-dicom-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Zero-allocation DICOM parser: tags, datasets, file meta, transfer syntaxes, pixel data"

[dependencies]
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
