[package]
name = "spectra-recon-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared reconstruction core: data model, volumes, modality trait, dispatch"

[dependencies]
spectra-dicom-parser = { path = "../dicom-parser" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
